--- a/7.8(금).md
+++ b/7.8(금).md
@@ -1,1 +1,2 @@
-### 
+### 2021.07.08(금)
+- Admin Page에서 팀 이름을 수정 하였을 때, 팀 전체 스코어 보드에서 팀 정보가 하나도 뜨지 않는 문제가 있었다. update 버튼을 누르면 팀 이름과 cc팀 수를 db에 업데이트하는 코드를 작성 하였는데, db를 확인해보니 cc팀 수를 제대로 불러오지 못하여 null로 저장되는 것을 확인할 수 있었다. 어디서부터 cc팀 수를 잘 불러오지 못하는지 확인을 하기 위해 console.log()를 사용하여 update action을 처리하는 ‘update_state’ 모듈과 이 모듈을 불러오는 ‘admin_create2’ 모듈에서 cc팀 수를 찾아보았다. 알고보니 ‘admin_create2’ 모듈에서 hidden으로 cc팀 수를 넘겨주었다고 생각하였는데, 그 코드가 빠져 있어서 ‘update_state’에서 cc팀수가 undefined가 된 것이고, 그게 Null로 저장이 된 것임을 알 수 있었다. hidden으로 값을 잘 넘겨주니 db에도 잘 저장이 되었고, 전체 스코어 보드에서도 팀에 대한 스코어 정보가 잘 출력 됨을 확인할 수 있었다.
